Testes com o metodo findByTaskTitle concluidos